# cppsak

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  TODO  build.bash  build.sh  compdb_test.cpp  input.hpp  main.cc  main.cpp  release.bash  run.bash  strings.cpp  strings.hpp  test.bash
doc/: build_from_src.md  usage.md
doc/usage/: enums.md  gmocks.md
example/: .gitignore  Makefile  input.hpp  main.cpp
test/: Makefile
test/included/: .gitignore  Makefile  input.hpp  main.cpp
test/standalone/: .gitignore  Makefile  input.hpp  main.cpp
testdata/: overloaded_methods.hpp  priv_methods.hpp  template_class.hpp
